.gitignore: add .idea/deploymentTargetSelector.xml which seems to be getting physical device IDs now

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@
 /.idea/navEditor.xml
 /.idea/assetWizardSettings.xml
 /.idea/vcs.xml
+/.idea/deploymentTargetSelector.xml
 .DS_Store
 /build
 /captures
